Fixed social media icon on mobile

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -222,6 +222,8 @@ a:hover {
 }
 
 
+
+
 /*
 Who We Are
 */ 
@@ -665,7 +667,7 @@ Olympics
     }
     
      .pillarBold {
-        font-size: 4vw;
+        font-size: 3vw;
         font-weight: bold;
     }
 
